--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -16,7 +16,7 @@
                 <div class="post-heading">
                     <div class="tags">
                         {{ range .Params.tags }}
-                        <a class="tag" href="{{ "/tags/" | relLangURL }}{{ . | urlize }}" title="{{ . }}">
+                        <a class="tag" href="{{ ".Site.BaseURL/tags/" | relLangURL }}{{ . | urlize }}" title="{{ . }}">
                             {{ . }}
                         </a>
                         {{ end }}
