--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -27,9 +27,9 @@
                     <div class="tags">
                         {{ $featured_condition_size := .Site.Params.featured_condition_size }}
                         {{ range $name, $taxonomy := .Site.Taxonomies.tags }}
-                        {{ $BaseURL := .Site.BaseURL}}
+                        {{ $BaseURL := .Site.BaseURL | relLangURL}}
                         {{ if gt (len $taxonomy.Pages) $featured_condition_size }}
-                        <a href="{{ $BaseURL | relLangURL}}tags/{{ $name | urlize }}" title="{{ $name }}">
+                        <a href="{{ $BaseURL }}tags/{{ $name | urlize }}" title="{{ $name }}">
                         {{ $name }}
                         </a>
                         {{ end }}
