--- a/layouts/_default/top.html
+++ b/layouts/_default/top.html
@@ -75,16 +75,18 @@
                     <h5><a href="/tags/">FEATURED TAGS</a></h5>
                     <div class="tags">
                         {{ $featured_condition_size := .Site.Params.featured_condition_size }}
+                        {{ $BaseURL := .Site.BaseURL | relLangURL}}
                         {{ range $name, $taxonomy := .Site.Taxonomies.tags }}
                         {{ if gt (len $taxonomy.Pages) $featured_condition_size }}
-                        <a href="{{ "/tags/" | relLangURL }}{{ $name | urlize }}" title="{{ $name }}">
-                            {{ $name }}
+                        <a href="{{ $BaseURL }}/tags/{{ $name | urlize }}" title="{{ $name }}">
+                        {{ $name }}
                         </a>
                         {{ end }}
                         {{ end }}
                     </div>
                 </section>
                 {{ end }}
+
 
                 <!-- Friends Blog -->
                 {{ if .Site.Params.friends }}
