--- a/layouts/taxonomy/terms.html
+++ b/layouts/taxonomy/terms.html
@@ -26,9 +26,10 @@
                     <h5><a href="/tags/">FEATURED TAGS</a></h5>
                     <div class="tags">
                         {{ $featured_condition_size := .Site.Params.featured_condition_size }}
+                        {{ $BaseURL := .Site.BaseURL | relLangURL}}
                         {{ range $name, $taxonomy := .Site.Taxonomies.tags }}
                         {{ if gt (len $taxonomy.Pages) $featured_condition_size }}
-                        <a href="{{ "/tags/" | relLangURL }}{{ $name | urlize }}" title="{{ $name }}">
+                        <a href="{{ $BaseURL }}/tags/{{ $name | urlize }}" title="{{ $name }}">
                         {{ $name }}
                         </a>
                         {{ end }}
