--- a/layouts/shortcodes/mind.html
+++ b/layouts/shortcodes/mind.html
@@ -1,10 +1,10 @@
 {{ $_hugo_config := `{ "version": 1 }` }}
-<script src="/js/mindmap.min.js"></script>
-<script src="/js/kity.min.js"></script>
-<script src="/js/kityminder.core.min.js"></script>
+<script src="{{ .Site.BaseURL | relLangURL }}/js/mindmap.min.js"></script>
+<script src="{{ .Site.BaseURL | relLangURL }}/js/kity.min.js"></script>
+<script src="{{ .Site.BaseURL | relLangURL }}/js/kityminder.core.min.js"></script>
 
 <!-- Photoswipe css/js libraries -->
-<link rel="stylesheet" href="/css/mindmap.css" />
+<link rel="stylesheet" href="{{ .Site.BaseURL | relLangURL }}/css/mindmap.css" />
 
 
 <div id="{{ .Get 0 }}" class="mindmap mindmap-lg">
