--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -16,7 +16,7 @@
 {{ if .Site.Params.disqus_proxy }}
 <!-- disqus 评论框 end -->
 <div id="disqus-comment"></div>
-<script src="{{ "js/iDisqus.js" | relURL }}"></script>
+<script src="{{ .Site.BaseURL | relLangURL }}/js/iDisqus.js"></script>
 <script>
 var disq = new iDisqus('disqus-comment', {
     forum: '{{ .Site.DisqusShortname}}',
